# pinyin_ime_dictbuilder

./: CMakeLists.txt  pinyinime_dictbuilder.cpp
share/: dictlist.cpp  dicttrie.cpp  matrixsearch.cpp  pinyinime.cpp  spellingtrie.cpp
